tests/lexer/tinvalidintegerliteral1.nim
discard """
  file: "tinvalidintegerliteral1.nim"
  line: 7
  errormsg: "invalid number"
"""

echo 0b
